# WEBagent

./: .gitignore  CMakeLists.txt  README.md  config.xdev-demo.json  ОТЧЕТ_ПО_РАЗРАБОТКЕ.md  ТЗ_WEB_AGENT_реальный_продукт.md
mock_api/: register_response.json  task_response.json
src/: main.cpp
src/core/: agent.cpp  agent.h  config.cpp  config.h  logger.cpp  logger.h
src/executor/: file_manager.cpp  task_executor.cpp  task_executor.h  task_factory.cpp  task_factory.h
src/network/: api_types.cpp  api_types.h  http_client.cpp  http_client.h  registration.cpp
src/utils/: file_utils.cpp  file_utils.h  json.cpp  json.h  platform_utils.cpp  platform_utils.h  string_utils.cpp  string_utils.h
tests/: test_agent_integration.cpp  test_api_types.cpp  test_config.cpp  test_helpers.h  test_http_client_negative.cpp  test_task_executor.cpp
